NEWS for Antiprism: http://www.antiprism.com

Version 0.26
xx-xx-xx Adrian Rossiter <adrian@antiprism.com>
         New Programs
            rotegrity: make rotegrity and nexorade models
            mmop_origami: multimodular polyhedron origami models
         Changes
            wythoff: new option -C for colouring by element
            geodesic, geo_m_n: change direction of pattern turn,
              so (m, n) is like previous (n, m)
            bravais: added inverse of f and i centering types
            n_icons: swap -J and -L option letters
            radial: renamed to off_color_radial
            twist: removed (use rotegrity -T -f)
            pol_recip: removed -r X (use wythoff -c d)
            sph_saff: removed (use antiprism_python)
            off2m,m2off: removed (Java applets no longer popular)
         Fixes
            minor bug fixes and improvements

Version 0.25.1
08-12-17 Adrian Rossiter <adrian@antiprism.com>
         Fixes
            build: issues affecting OSX, install all headers

Version 0.25
23-11-17 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            stellate: polyhedron stellations (Roger Kaufman)
            miller: Miller's stellations of the icosahedron (Roger Kaufman)
            wythoff: Wythoff-style tilings on various surfaces
            kaleido: Legacy program ported to Antiprism (Roger Kaufman)
            radial: Color by symmetry radiating from axes (Roger Kaufman)
         Changes
            poly_weave: moved to unsupported programs
            off2obj: added optional mtl file output
            canonical: works on more models and code reorganization
              added new planarization and display options
            conway: changed to use wythoff engine while keeping legacy
              code by George Hart. Enhancements and additional operators
              to original conway operators
            waterman: option to fill interior points
            off_util: removed -E
         Fixes