@@ -121,7 +121,8 @@ Other Keys
 .IP
 J/j \- increase/decrease vertex and edge size
 K/k \- increase/decrease vertex size
-L/l \- increase/decrease edge Size
+L/l \- increase/decrease edge size
+U/u \- increase/decrease label text size
 c \- toggle label colours between light and dark
 C \- Invert label colours
 .SH "SEE ALSO"
