@@ -102,7 +102,8 @@ void vw_opts::usage()
 "Other Keys\n"
 "   J/j - increase/decrease vertex and edge size\n"
 "   K/k - increase/decrease vertex size\n"
-"   L/l - increase/decrease edge Size\n"
+"   L/l - increase/decrease edge size\n"
+"   U/u - increase/decrease label text size\n"
 "   c - toggle label colours between light and dark\n"
 "   C - Invert label colours\n"
 "\n"
